Wed Mar 11 03:48:01 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: use RUBY_VM_IFUNC_P() to recognize IFUNC or not.

	* vm.c: ditto.

	* vm_dump.c: ditto.

	* vm_insnhelper.c: ditto.

	* vm_core.h: use RB_TYPE_P() instead of BUILTIN_TYPE().

Wed Mar 11 03:21:37 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: define struct THROW_DATA to represent
	  throwing data. Also define accessor functions.

	* eval_intern.h: move related changes into vm_insnhelper.h.
	  Now these MACROs (functions) are only used in vm*.c.

	  There is only THROW_DATA_P(err) to check this data type or not.

	* vm.c: catch up these changes.

	* vm_eval.c: ditto.

	* vm_insnhelper.c: ditto.

Wed Mar 11 00:57:00 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/rubygems/test_gem_security_trust_dir.rb: The return value of
	  File::Stat#mode is OS dependent. In AIX, 0200000 is set.

Tue Mar 10 20:03:41 2015  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Invoke setup_shutdown_pipe in start method
	  instead of listen method.
	  [ruby-core:68476] [Bug #10956] Reported by Shintaro Kojima.

Tue Mar 10 17:27:27 2015  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_join): Fixnum (except TAG_FATAL) and
	  NODE should not be reached here.

Mon Mar  9 21:42:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (ep_cref): rename to lep_cref() because it should be
	  local ep.

Mon Mar  9 16:34:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_close): don't raise on dobule
	  close for consistent to IO#close.

Mon Mar 09 06:44:48 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: define struct SVAR for SVAR.
	  This data type is also same layout of NODE (NODE_IF).

	* vm_insnhelper.c: catch up this change.

Mon Mar  9 06:43:21 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (lep_svar_set): add WBs.

Mon Mar  9 06:19:06 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: define rb_cref_t and change to use it.
